--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "simple-movie-search-app",
+  "name": "React_class_based_to_do_App",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dev-kani.github.io/react-class-based-to-do-app",
   "dependencies": {
     "axios": "^0.18.1",
     "react": "^16.7.0",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
